cabal-version:       2.2
name:                streamly-strings
version:             0.1.0
synopsis:            Composing strings
description:         Composing strings
homepage:            https://streamly.composewell.com
bug-reports:         https://github.com/composewell/streamly-strings/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           Composewell Technologies
category:            Streamly
stability:           Experimental
tested-with:         GHC==9.2.1
                   , GHC==9.0.1
                   , GHC==8.10.5
                   , GHC==8.8.4
                   , GHC==8.6.5
                   , GHC==8.4.4
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  NOTICE
  README.md

source-repository head
  type: git
  location: https://github.com/composewell/streamly-strings

flag fusion-plugin
  description: Use fusion plugin for benchmarks and executables
  manual: True
  default: False

common compile-options
    default-language:   Haskell2010
    ghc-options:        -Weverything
                        -Wno-implicit-prelude
                        -Wno-prepositive-qualified-module
                        -Wno-missing-import-lists
                        -Wno-missing-safe-haskell-mode
                        -Wno-unsafe
                        -Wno-missing-deriving-strategies
                        -Wno-monomorphism-restriction
                        -Wno-missing-local-signatures
                        -Wno-missed-specialisations
                        -Wno-all-missed-specialisations
    default-extensions: TemplateHaskell
                      , QuasiQuotes

common optimization-options
  ghc-options:
    -O2
    -fdicts-strict
    -fspec-constr-recursive=16
    -fmax-worker-args=16

library
  import: compile-options, optimization-options
  hs-source-dirs: src
  exposed-modules:
    Streamly.MkString
    Streamly.QuotedString
  build-depends:
      base              >= 4.8   && < 5
    , streamly          >= 0.8.2 && < 0.8.3
    , exceptions
    , template-haskell
